2003-10-30  Murray Cumming  <murrayc@usa.net>

	* gtk/src/toolitem.hg: Removed get/set_pack_end() now that they are
	removed from GTK+, to fix the CVS build.
	* docs/Makefile.am_fragment: Install docs to gtkmm-2.4 directory
	instead of gtkmm-2.3.
	* docs/reference/Makefile.am: Add installdox rule to make the 
	reference html link to the glibmm docs when they are installed.

2003-10-26  Murray Cumming  <murrayc@usa.net>

	* Dealt with several //TODO comments, adding several unset_*() methods
	* *Action: Changed create() to create_from_stock() and create.
	* ToggleAction: create() methods: Added bool is_active parameter.
	* RadioAction: create() methods: Added group parameter.
	* Added gtk/gtkmm/radiobuttongroup.[h|cc] containing 
	Gtk::RadioButtonGroup. This was previously in the Gtk::Menu_Helpers
	namespace. It now works with RadioActions as well as the 3 other
	Radio item classes.
	* Added examples/combobox/complex, showing a custom tree model,

2.3.0:

2003-10-24  Murray Cumming  <murrayc@usa.net>

	* gtk/src/gtk_signals.defs: regenerated, keeping hand-coded changes,
	after adding some extra GTypes to tools/extra_defs_gen.
	* gkt/gtkmm: Added cellrenderer_generation.[h|cc], with some of the 
	templates and template specialisations previously in 
	treeviewcolumn.[hg|ccg]. This allowed them to be reused in
	gtk/src/celllayout.hg for a pack_start(model column) template.
	* demos/gtk-demo/: Added example_ui_manager.cc - a C++ version of
	the C one.  

2003-10-22  Murray Cumming  <murrayc@usa.net>

	* Added wrappers for GtkToolItem, ToolButton, ToggleButton,
	RadioToolButton.

2003-10-17  Murray Cumming  <murrayc@usa.net>

	* gtk/src/combobox.hg: Updated for latest API.
	* Added gtk/gtkmm/comboboxtext.[h|cc], putting text-based stuff
	in a sub class.
	* gtk/src/treemodel.[hg|ccg]: Added const overload of children(),
	but it's a bad hack that needs more attention.
	* Added examples/book/combobox, which uses ComboBoxText and should use