@@ -62,8 +62,7 @@
            <ul>
             <li><a href="http://cvs.gnome.org/lxr/source/gtkmm-root/base/CHANGES">What's new in gtkmm 2.0</a></li>
             <li><a
-            href="http://cvs.gnome.org/lxr/source/gtkmm-root/base/PORTING">Porting
-            from gtkmm 1.2.x to gtkmm 2.0.x</a></li>
+            href="http://cvs.gnome.org/lxr/source/gtkmm-root/base/PORTING">Porting from gtkmm 1.2.x to gtkmm 2.0.x</a></li>
             <li><a href="http://cvs.gnome.org/lxr/source/gnomemm/PORTING">Porting from gnomemm 1.2.x to gnomemm 2.0.x</a></li>
             <li><a href="http://cvs.gnome.org/lxr/source/gtkmm-root/base/NEWS">News</a></li>
             <li><a href="http://cvs.gnome.org/lxr/source/gtkmm-root/base/ChangeLog">ChangeLog</a></li>
@@ -106,21 +105,20 @@
           </td>
           <td valign="Top" width="33%">
            <ul>
-            <li><a href="reference/html/classGlib_1_1ustring.html">ustring</a></li>
-            <li><a href="reference/html/classGlib_1_1Exception.html">
-             Exceptions</a></li>
-            <li><a href="reference/html/classGlib_1_1RefPtr.html">RefPtr&lt;&gt;</a><br>
+            <li><a href="../../../glibmm-2.4/docs/reference/html/classGlib_1_1ustring.html">ustring</a></li>
+            <li><a href="../../../glibmm-2.4/docs/reference/html/classGlib_1_1Exception.html">Exceptions</a></li>
+            <li><a href="../../../glibmm-2.4/docs/reference/html/classGlib_1_1RefPtr.html">RefPtr&lt;&gt;</a><br>
             </li>
 
            </ul>
           </td>
           <td valign="Top" width="33%">
            <ul>
-            <li><a href="reference/html/group__MainLoop.html">Main Event loop</a></li>
-            <li><a href="reference/html/group__Spawn.html">Spawning Processes</a></li>
-            <li><a href="reference/html/group__Threads.html">Threads</a></li>
-            <li><a href="reference/html/group__MiscUtils.html">Miscellaneous Utility Functions</a></li>
-            <li><a href="reference/html/group__CharsetConv.html">Character set conversion</a></li>
+            <li><a href="../../../glibmm-2.4/docs/reference/html/group__MainLoop.html">Main Event loop</a></li>
+            <li><a href="../../../glibmm-2.4/docs/reference/html/group__Spawn.html">Spawning Processes</a></li>
+            <li><a href="../../../glibmm-2.4/docs/reference/html/group__Threads.html">Threads</a></li>
+            <li><a href="../../../glibmm-2.4/docs/reference/html/group__MiscUtils.html">Miscellaneous Utility Functions</a></li>
+            <li><a href="../../../glibmm-2.4/docs/reference/html/group__CharsetConv.html">Character set conversion</a></li>
 
            </ul>
           </td>
@@ -144,7 +142,7 @@
            <ul>
             <li><a href="reference/html/namespaceAtk.html">Atk</a></li>
             <li><a href="reference/html/namespaceGdk.html">Gdk</a></li>
-            <li><a href="reference/html/namespaceGlib.html">Glib</a></li>
+            <li><a href="../../../glibmm-2.4/docs/reference/html/namespaceGlib.html">Glib</a></li>
             <li><a href="reference/html/namespaceGtk.html">Gtk</a></li>
             <li><a href="reference/html/namespacePango.html">Pango</a></li>
 
