@@ -1,3 +1,8 @@
+2003-10-31  Murray Cumming  <murrayc@usa.net>
+
+	* docs/index.html: Corrected links to glibmm docs, using relative 
+	links.
+
 2003-10-30  Murray Cumming  <murrayc@usa.net>
 
 	* gtk/src/toolitem.hg: Removed get/set_pack_end() now that they are
